# cairn

./: .coverage  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  cairn-graph  install.sh  pyproject.toml  pytest.ini  requirements.txt  uninstall.sh
.claude/: settings.json
.claude/rules/: code-graph-navigation.md  memory-system.md
.github/workflows/: test.yml  tests.yml
.staged_context/: b13b0f64-5250-4798-bb4b-c1cfcaba6ef2_bootstrap.txt
cairn/: .thinking_block_seen.json  ORG_INDEX.md  SPEC-vec-index-write-fix.md  __init__.py  ab_writeside.py  analyser.py  api_server.py  ast_parser.py  audit_agent.py  backfill_associated_files.py  backfill_ingestion.py  backfill_keywords.py  bench_report.py  benchmark_extract.py  cairn_verify.py  calibration.py  calibration_import_claude_md.py  calibration_inject.py  calibration_qf_backfill.py  calibration_selfmod.py  capture_watchdog.py  config.py  consolidate.py  container_injector.py  contradiction_scan.py  daemon.py  dashboard.py  db.py  dep_graph.py  embeddings.py  graph.py  graph_fleet.py  ingest.py  ingest_transcript.py  init_db.py  interface_registry.py  keywords.py  label_relevance.py  memory_qf_backfill.py  memory_selfmod.py  (+12 more)
cairn/proxy/: __init__.py  cm_filter.py  request_inject.py  response_filter.py  server.py  sidecar.py
cairn/static/: index.html
cairn/sync/: __init__.py  changeset.py  cli.py  client.py  discovery.py  ephemeral.py  identity.py  pairing.py  server.py  service.py
docs/: blog-devto.md  code-analysis-2026-05-28.md  container-setup.md  multi-node-sync.md  spec-calibration-system.md  spec-memory-relevance-grading.md  spec-v0.14-improvements.md  threshold-empirical-2026-05-28.md
engram/: config.py  daemon.py  embeddings.py  init_db.py  query.py
hooks/: drain_queue.py  enforcement.py  hash_verify.py  health.py  hook_helpers.py  parser.py  posttool_hook.py  pretool_hook.py  prompt_hook.py  query_expansion.py  retrieval.py  stop_hook.py  storage.py  transcript_adapter.py  write_queue.py
shims/: cairn-hook.py  cairn-hook.sh
templates/: cairn-command.md  cairn-container-instructions.md  cairn-launcher.sh  copilot-hooks-container.json  copilot-hooks.json  engram-command.md  global-claude.md  global-settings.json
tests/: conftest.py  manifest.json  proxy_e2e_check.py  test_ab_writeside.py  test_active_bootstrap.py  test_analyser.py  test_ast_parser.py  test_calibration_cli.py  test_calibration_import_claude_md.py  test_calibration_inject.py  test_calibration_schema.py  test_calibration_selfmod.py  test_consolidation.py  test_daemon_and_cache.py  test_daemon_vector_search.py  test_dashboard_graph.py  test_db_error_logging.py  test_delivery_dampening.py  test_dep_graph.py  test_e2e_pipeline.py  test_enforcement_loop.py  test_ephemeral_selfheal.py  test_gates.py  test_graph.py  test_graph_fleet.py  test_hash_verify.py  test_hook_e2e.py  test_incremental_ingest.py  test_install_validation.py  test_integration.py  test_keywords.py  test_live_hooks.py  test_memory_dual_embedding.py  test_parser.py  test_parser_stranded.py  test_posttool_hook.py  test_pretool_bash_recovery.py  test_pretool_hook.py  test_project_bootstrap.py  test_prompt_hook.py  (+37 more)
tests/sync/: conftest.py  test_changeset_merge.py  test_pairing_v2.py  test_presence_gating.py  test_schema_migration.py  test_three_node_lan.py  test_transport.py
