[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn-memory"
version = "0.15.0"
description = "Persistent memory system for Claude Code — invisible capture, semantic retrieval, cross-session continuity"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "James Ovodenko"},
]
keywords = ["claude", "claude-code", "memory", "llm", "ai", "semantic-search", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sentence-transformers>=5.0,<6.0",
    "sqlite-vec>=0.1.6,<0.2",
    "pysqlite3-binary>=0.5.4",
    "yake>=0.4,<0.8",
]

[project.optional-dependencies]
proxy = [
    "aiohttp>=3.9",
]
ast = [
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
]
test = [
    "pytest>=7.0",
]
# code-review-graph powers the code-graph fleet + live-session structural
# injection (cairn/graph.py, cairn/graph_fleet.py). Separate extra because it
# pulls a large transitive set (fastmcp/uvicorn/cryptography/tree-sitter pack).
graph = [
    "code-review-graph>=2.3",
]

[project.urls]
Homepage = "https://github.com/jimovonz/cairn"
Repository = "https://github.com/jimovonz/cairn"
Issues = "https://github.com/jimovonz/cairn/issues"

[project.scripts]
cairn-query = "cairn.query:main_entry"
cairn-dashboard = "cairn.dashboard:main"
cairn-graph = "cairn.graph:main"
cairn-calibration = "cairn.calibration:main"
cairn-session-extract = "cairn.session_extract:main"
cairn-calibration-analyser = "cairn.analyser:main"
cairn-calibration-selfmod = "cairn.calibration_selfmod:main"
cairn-calibration-import-claude-md = "cairn.calibration_import_claude_md:main"
cairn-proxy = "cairn.proxy.server:main"
cairn-sync = "cairn.sync.cli:main"
cairn-review-writeback = "cairn.review_writeback:main"
cairn-bench-report = "cairn.bench_report:main"

[tool.setuptools.packages.find]
include = ["cairn*", "hooks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
